HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncIteratorLoopTypingFamily/Source/Main.uv
//! Rejected async iterator loop specimen for non-async enclosing returns.

public procedure asyncIteratorLoopTypingFamilyReference(stream: Stream<i32, !>) -> i32 {
    loop value in stream {
        let copied_value: i32 = value
    }
    return 0
}
